--- a/home.html
+++ b/home.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header class="nav">
-        <div><button>sobre nós</button>
-        <button>Planos</button>
-        <button>Artigos</button>
+        <div><button class="botao">sobre nós</button>
+        <button class="botao">Planos</button>
+        <button class="botao">Artigos</button>
         </div>
         
         <div><input type="pesquisar" style="border-radius: 10px;">
