check_home_sobrenos_Lp

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <title>Mind</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar">
            
         <img src="img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"/>
         <container class="cont-nav">
@@ -23,12 +23,13 @@
     <nav class="nav nav-pills" style="padding-bottom: 5px;">
         <a class="nav-item nav-link" href="pages/login.html"> Planos</a>
         <a class="nav-item nav-link" href="pages/carrinho.html"> Artigos</a>
-        <a class="nav-item nav-link" href="pages/sobrenos.html"> Sobre nós</a>
+        <a class="nav-item nav-link" href="sobrenos.html"> Sobre nós</a>
     </nav>
     </header>
     <section class="corpo">
+        
+        <img src="img/imagem.jpg" alt="" class="imagem">
         <div class="buscar">
-            <img src="img/imagem.jpg" alt="" class="imagem">
             <input type="">
             <img src="img/magnifying-glass-solid.png" class="icon-click">
             <button type="button" class="filtro">Filtro</button>
