--- a/landing-page.html
+++ b/landing-page.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar">
            
             <img src="img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"/>
             <container class="cont-nav">
@@ -25,7 +25,7 @@
     <nav class="nav nav-pills" style="padding-bottom: 5px;">
         <a class="nav-item nav-link" href="pages/login.html"> Planos</a>
         <a class="nav-item nav-link" href="pages/carrinho.html"> Artigos</a>
-        <a class="nav-item nav-link" href="pages/sobrenos.html"> Sobre nós</a>
+        <a class="nav-item nav-link" href="sobrenos.html"> Sobre nós</a>
     </nav>
     <div class="grid-container container-yellow container-gen back-img-main">     
         <div class="container-fluid" style="height: 600px;">  
