--- a/home.html
+++ b/home.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/navbar.css">
     <title>Mind</title>
 </head>
 <body>
     <nav class="navbar">
-           
-        <img src="img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"/>
-        <container class="cont-nav">
+        <a href="home.html" class="botao_logo"><img src="img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"></a>
+     <container class="cont-nav">
             <img src="img/user-regular.png" class="icon-click">
             <img src="img/magnifying-glass-solid.png" class="icon-click">
         </container>
@@ -21,11 +21,10 @@
 
     </nav>
     <nav class="nav nav-pills" style="padding-bottom: 5px;">
-        <a class="nav-item nav-link" href="pages/login.html"> Planos</a>
+        <a class="nav-item nav-link" href="landing-page.html"> Planos</a>
         <a class="nav-item nav-link" href="pages/carrinho.html"> Artigos</a>
         <a class="nav-item nav-link" href="sobrenos.html"> Sobre nós</a>
     </nav>
-    </header>
     <section class="corpo">
         
         <img src="img/imagem.jpg" alt="" class="imagem">
