--- a/sobrenos.html
+++ b/sobrenos.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/sobrenos.css">
+    <link rel="stylesheet" href="css/navbar.css">
     <title>Mind</title>
 </head>
 <body>
     <nav class="navbar">
-           
-        <img src="img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"/>
-        <container class="cont-nav">
+        <a href="home.html" class="botao_logo"><img src="img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"></a>
+     <container class="cont-nav">
             <img src="img/user-regular.png" class="icon-click">
             <img src="img/magnifying-glass-solid.png" class="icon-click">
         </container>
@@ -25,7 +25,6 @@
         <a class="nav-item nav-link" href="pages/carrinho.html"> Artigos</a>
         <a class="nav-item nav-link" href="sobrenos.html"> Sobre nós</a>
     </nav>
-</header>
 <section class="grade1">
     <img src="img/imagem-sobrenos2.svg" alt="imagem1" class="imagem1">
     <p class="texto1">Nos da Mind, acreditamos que o bem-estar mental é fundamental para uma vida saudável e equilibrada. Por isso, desenvolvemos uma plataforma que conecta pacientes a psicólogos qualificados, facilitando o acesso a cuidados psicológicos de qualidade.
