--- a/home.html
+++ b/home.html
@@ -21,9 +21,9 @@
 
     </nav>
     <nav class="nav nav-pills" style="padding-bottom: 5px;">
-        <a class="nav-item nav-link" href="landing-page.html"> Planos</a>
-        <a class="nav-item nav-link" href="pages/carrinho.html"> Artigos</a>
-        <a class="nav-item nav-link" href="sobrenos.html"> Sobre nós</a>
+        <a class="nav-item nav-link" href="/pages/landing-page.html"> Planos</a>
+        <a class="nav-item nav-link" href=""> Artigos</a>
+        <a class="nav-item nav-link" href="/pages/sobrenos.html"> Sobre nós</a>
     </nav>
     <section class="corpo">
         
