--- a/pages/landing-page.html
+++ b/pages/landing-page.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/landing-page.css">
-    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="/css/landing-page.css">
+    <link rel="stylesheet" href="/css/navbar.css">
     <title>Mind</title>
 </head>
 <body>
 
 
     <nav class="navbar">
-        <a href="home.html" class="botao_logo"><img src="img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"></a>
+        <a href="/home.html" class="botao_logo"><img src="/img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"></a>
      <container class="cont-nav">
-            <img src="img/user-regular.png" class="icon-click">
-            <img src="img/magnifying-glass-solid.png" class="icon-click">
+            <img src="/img/user-regular.png" class="icon-click">
+            <img src="/img/magnifying-glass-solid.png" class="icon-click">
         </container>
         <button type="button"  class="filtro">Login</button>
     </div>
     </nav>
 
     <nav class="nav nav-pills" style="padding-bottom: 5px;">
-        <a class="nav-item nav-link" href="landing-page.html"> Planos</a>
-        <a class="nav-item nav-link" href="pages/carrinho.html"> Artigos</a>
-        <a class="nav-item nav-link" href="sobrenos.html"> Sobre nós</a>
+        <a class="nav-item nav-link" href="/pages/landing-page.html"> Planos</a>
+        <a class="nav-item nav-link" href=""> Artigos</a>
+        <a class="nav-item nav-link" href="/pages/sobrenos.html"> Sobre nós</a>
     
 
     </nav>
@@ -45,7 +45,7 @@
     <div class="grid-container container-green">              
         <div class="row">
             <div class="col">
-                <img src="img/home_img_2.png" class="home-img-size_2">
+                <img src="/img/home_img_2.png" class="home-img-size_2">
             </div>
             
             <div class="col">
