--- a/pages/login.html
+++ b/pages/login.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/login.css">
-    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/navbar.css">
     <title>Mind</title>
 </head>
 <body>
     <nav class="navbar">
-        <a href="home.html" class="botao_logo"><img src="img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"></a>
+        <a href="/home.html" class="botao_logo"><img src="/img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"></a>
      <container class="cont-nav">
-            <img src="img/user-regular.png" class="icon-click">
-            <img src="img/magnifying-glass-solid.png" class="icon-click">
+            <img src="/img/user-regular.png" class="icon-click">
+            <img src="/img/magnifying-glass-solid.png" class="icon-click">
         </container>
         <button type="button" class="filtro">Login</button>
     </div>
@@ -21,13 +21,13 @@
 
     </nav>
     <nav class="nav nav-pills" style="padding-bottom: 5px;">
-        <a class="nav-item nav-link" href="landing-page.html"> Planos</a>
-        <a class="nav-item nav-link" href="pages/carrinho.html"> Artigos</a>
-        <a class="nav-item nav-link" href="sobrenos.html"> Sobre nós</a>
+        <a class="nav-item nav-link" href="/pages/landing-page.html"> Planos</a>
+        <a class="nav-item nav-link" href=""> Artigos</a>
+        <a class="nav-item nav-link" href="/pages/sobrenos.html"> Sobre nós</a>
     </nav>
 <section>
     <div class="imgx">
-    <img src="img/login_cadastro.jpg" alt="" class="fundo">
+    <img src="/img/login_cadastro.jpg" alt="" class="fundo">
     </div>
     <div>
         <div class="login">
@@ -36,7 +36,7 @@
           <div class="Senha"><label for="exampleDropdownFormPassword2">Senha</label></div>
           <input type="password" class="form-control" id="password3" placeholder="Senha">
           <div class="baixo">
-            <a href="cadastro.html" class="nav-item nav-link">cadastre-se</a>
+            <a href="/cadastro.html" class="nav-item nav-link">cadastre-se</a>
             <button type="submit" class="filtro">Entrar</button>
           </div>
           
