--- a/pages/sobrenos.html
+++ b/pages/sobrenos.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/sobrenos.css">
-    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="/css/sobrenos.css">
+    <link rel="stylesheet" href="/css/navbar.css">
     <title>Mind</title>
 </head>
 <body>
     <nav class="navbar">
-        <a href="home.html" class="botao_logo"><img src="img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"></a>
+        <a href="home.html" class="botao_logo"><img src="/img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"></a>
      <container class="cont-nav">
-            <img src="img/user-regular.png" class="icon-click">
-            <img src="img/magnifying-glass-solid.png" class="icon-click">
+            <img src="/img/user-regular.png" class="icon-click">
+            <img src="/img/magnifying-glass-solid.png" class="icon-click">
         </container>
         <button type="button" class="filtro">Login</button>
     </div>
@@ -21,12 +21,12 @@
 
     </nav>
     <nav class="nav nav-pills" style="padding-bottom: 5px;">
-        <a class="nav-item nav-link" href="landing-page.html"> Planos</a>
-        <a class="nav-item nav-link" href="pages/carrinho.html"> Artigos</a>
-        <a class="nav-item nav-link" href="sobrenos.html"> Sobre nós</a>
+        <a class="nav-item nav-link" href="/pages/landing-page.html"> Planos</a>
+        <a class="nav-item nav-link" href=""> Artigos</a>
+        <a class="nav-item nav-link" href="/pages/sobrenos.html"> Sobre nós</a>
     </nav>
 <section class="grade1">
-    <img src="img/imagem-sobrenos2.svg" alt="imagem1" class="imagem1">
+    <img src="/img/imagem-sobrenos2.svg" alt="imagem1" class="imagem1">
     <p class="texto1">Nos da Mind, acreditamos que o bem-estar mental é fundamental para uma vida saudável e equilibrada. Por isso, desenvolvemos uma plataforma que conecta pacientes a psicólogos qualificados, facilitando o acesso a cuidados psicológicos de qualidade.
 
         Nosso objetivo é democratizar o acesso à saúde mental, simplificando o processo de busca por ajuda profissional, proporcionando um espaço seguro e acolhedor onde os pacientes possam encontrar o apoio que precisam. Através de uma interface intuitiva, queremos oferecer uma lista diversificada de profissionais, permitindo que cada usuário encontre um psicólogo que se alinhe com suas necessidades e preferências.</p>
@@ -37,7 +37,7 @@
     <div class="botao_plano"><button class="estilo_botao">Conheça nosso planos</button>
     </div>
     </div>
-        <img src="img/imagem-sobrenos.jpg" alt="imagem1" class="imagem2">
+        <img src="/img/imagem-sobrenos.jpg" alt="imagem1" class="imagem2">
 
     
 </section>
