--- a/pages/sobrenos.html
+++ b/pages/sobrenos.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="home.html" class="botao_logo"><img src="/img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"></a>
+        <a href="/home.html" class="botao_logo"><img src="/img/logo_p2.png" class="logo_size" alt="logo" style="cursor: pointer;"></a>
      <container class="cont-nav">
             <img src="/img/user-regular.png" class="icon-click">
             <img src="/img/magnifying-glass-solid.png" class="icon-click">
