--- a/pages/login.html
+++ b/pages/login.html
@@ -27,18 +27,19 @@
     </nav>
 <section>
     <div class="imgx">
-    <img src="/img/login_cadastro.jpg" alt="" class="fundo">
+        <img src="/img/login_cadastro.jpg" alt="" class="fundo">
     </div>
     <div>
         <div class="login">
-          <div class="Email"><label for="email">Endereço de email</label></div>
+          <div class="Email"><label for="email">Endereço de email</label>
+        </div>
           <input type="email" class="form-control" id="email3" placeholder="email@gmail.com">
           <div class="Senha"><label for="exampleDropdownFormPassword2">Senha</label></div>
           <input type="password" class="form-control" id="password3" placeholder="Senha">
           <div class="baixo">
             <a href="/cadastro.html" class="nav-item nav-link">cadastre-se</a>
             <button type="submit" class="filtro">Entrar</button>
-          </div>
+        </div>
           
     </div>
         </div>
