--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -64,6 +64,7 @@
             
         </div>
         <div class="cadastrar">
+        <input type="checkbox" name="" id=""><a href="">termos e condições</a>
         <button type="submit" class="filtro">Cadastrar</button>
             </div>
 </section>
