--- a/pages/login.html
+++ b/pages/login.html
@@ -37,7 +37,7 @@
           <div class="Senha"><label for="exampleDropdownFormPassword2">Senha</label></div>
           <input type="password" class="form-control" id="password3" placeholder="Senha">
           <div class="baixo">
-            <a href="/cadastro.html" class="nav-item nav-link">cadastre-se</a>
+            <a href="/pages/cadastro.html" class="nav-item nav-link">cadastre-se</a>
             <button type="submit" class="filtro">Entrar</button>
         </div>
           
